[package]
name = "cli-rng"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "Sol's RNG but CLI!"
repository = "https://github.com/FBDev64/cli-rng.git"
homepage = "https://github.com/FBDev64/cli-rng"
readme = "README.md"
categories = ["games"]


[dependencies]
rand = "0.8.5"
