[package]
name = "cli-rng"
version = "0.1.6"
edition = "2021"
license-file = "LICENSE"
description = "Sol's RNG but CLI!"
repository = "https://github.com/FBDev64/terminal-rng.git"
homepage = "https://github.com/FBDev64/terminal-rng"
readme = "README.md"
categories = ["games"]

[dependencies]
rand = "0.8.5"
